force-app/main/default/objects/Contribution__c/Contribution__c.object-meta.xml
<CustomObject>
    <label>Contribution</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>