force-app/main/default/objects/Contribution__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contributions</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>