force-app/main/default/objects/Contribution__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <label>Received</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>