force-app/main/default/objects/Contribution__c/fields/Requested__c.field-meta.xml
<CustomField>
    <fullName>Requested__c</fullName>
    <label>Requested</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>